--- a/src/styles/pages/author.scss
+++ b/src/styles/pages/author.scss
@@ -10,7 +10,7 @@
 
     width: clamp(400px, 100%, 600px);
 
-    background-color: var(--middle-color);
+    background-color: var(--color);
     color: var(--bg);
 
     border-radius: 32px;
