--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro'
     <section class="info">
         <a href="/authors" class="author">See All Authors</a> | <span class="date">Today</span>
     </section>
-    <article class="content">
+    <article class="postContent">
 
     </article>
     <script>
