--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -42,7 +42,7 @@ import Layout from '../layouts/Layout.astro'
 
             infoEle.querySelector('.date').textContent = post.date
 
-            postEle.querySelector('.content').innerHTML = post.content
+            postEle.querySelector('.postContent').innerHTML = post.content
         }
         else location.href = '/blog'
 
