--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -36,5 +36,8 @@
         & :first-child {
             margin-top: 0;
         }
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
