--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -26,7 +26,7 @@
         flex: 1;
 
         * {
-            text-wrap: balance;
+            text-wrap: wrap;
         }
 
         & :first-child {
