--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -29,10 +29,10 @@
             text-wrap: wrap;
         }
 
-        & :first-child {
+        & > :first-child {
             margin-top: 0;
         }
-        &:last-child {
+        & > :last-child {
             margin-bottom: 0;
         }
     }
