--- a/src/pages/authorPage.astro
+++ b/src/pages/authorPage.astro
@@ -6,13 +6,14 @@ import Layout from '../layouts/Layout.astro'
 
 ---
 <Layout title="Author" pageType="author" classItems="ignorePadding">
-    <h2 class="name"></h2>
     <script>
         const urlSearchParams = new URLSearchParams(window.location.search);
         const username = urlSearchParams.get('username');
 
+        var bfUrl = 'https://blogfeed.adarshrkumar.dev'
+
         var author = {}
-        await fetch(`https://blogfeed.adarshrkumar.dev/getAuthor?username=${username}`)
+        await fetch(`${bfUrl}/getAuthor?username=${username}`)
             .then(response => response.json())
             .then(json => {
                 author = json
@@ -22,9 +23,28 @@ import Layout from '../layouts/Layout.astro'
         if (author.code === 200) {
             author = author.author
             var authorEle = document.querySelector('.author')
-            authorEle.querySelector('.name').textContent = author.displayName
+
+            if (author.hasPfp) {
+                var pfpEle = document.createElement('div')
+                pfpEle.classList.add('pfp')
+
+                var pfpInner = document.createElement('img')
+                pfpInner.classList.add('pfp__inner')
+
+                pfpInner.src = `${bfUrl}/author/${username}/pfp`
+                pfpInner.alt = `${username}'s Profile Picture'`
+
+                pfpEle.appendChild(pfpInner)
+
+                authorEle.appendChild(pfpEle)
+            }
+
+            var nameEle = document.createElement('h2')
+            nameEle.classList.add('name')
+            nameEle.textContent = author.displayName
+
+            authorEle.appendChild(nameEle)
         }
         else location.href = '/blog'
-
     </script>
 </Layout>
