--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -5,7 +5,7 @@
 .main-sidebar {
     padding: 1rem;
 
-    min-width: 10rem;
+    max-width: 10rem;
 
     display: flex;
     flex-direction: column;
