--- a/src/styles/pages/author.scss
+++ b/src/styles/pages/author.scss
@@ -35,12 +35,16 @@
         aspect-ratio: 1;
 
         border-radius: 50%;
+
         overflow: hidden;
+        pointer-events: none;
 
         &::after {
             content: '';
             position: absolute;
             inset: 0;
+            background-color: var(--color);
+            opacity: 0.1;
         }
     }
 }
