--- a/src/styles/pages/author.scss
+++ b/src/styles/pages/author.scss
@@ -46,6 +46,8 @@
 
             background-color: var(--color);
             opacity: 0;//.1;
+
+            border-radius: 50%;
         }
 
         &__inner {
