--- a/src/pages/authorPage.astro
+++ b/src/pages/authorPage.astro
@@ -5,7 +5,7 @@ import '../styles/pages/author.scss'
 import Layout from '../layouts/Layout.astro'
 
 ---
-<Layout title="Author" pageType="author" classItems="ignorePadding">
+<Layout title="Author" pageType="author" classItems="ignorePadding" inlineStyles="display: none;">
     <script>
         const urlSearchParams = new URLSearchParams(window.location.search);
         const username = urlSearchParams.get('username');
@@ -53,6 +53,8 @@ import Layout from '../layouts/Layout.astro'
                 bioEle.innerHTML = bio
                 authorEle.appendChild(bioEle)
             }
+            
+            authorEle.style.display = ''
         }
         else location.href = '/blog'
     </script>
