--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -3,12 +3,18 @@
 }
 
 .main-sidebar {
-    padding: 1rem;
+    --gap: 1rem;
+    position: sticky;
+    top: 0;
+
+    padding: var(--gap);
+
+    max-height: 100dvh;
 
     display: flex;
     flex-direction: column;
 
-    gap: 1rem; 
+    gap: var(--gap); 
     
     border-left: solid 1px var(--color);
 
@@ -29,7 +35,7 @@
 .channel-stats {
     display: grid;
     // grid-template-rows: repeat(auto-fit, minmax(3rem, 1fr));
-    gap: 1rem;
+    gap: var(--gap);
 
     .channel-container {
         --padding: 5px;
