--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -1,11 +1,9 @@
 .post, .page-title:has(+ .post) {
-    --bor: 0.09375rem solid var(--color);
+    --padding: 1rem;
+    --bor: 1px solid var(--color);
 
     margin-inline: auto;
     width: clamp(500px, 100%, 800px);
-
-    border-left: var(--bor);
-    border-right: var(--bor);
 }
 
 .info {
@@ -19,10 +17,13 @@
     overflow-x: hidden;
 
     .info, .postContent {
-        padding: 16px;
+        padding: var(--padding);
+        border-left: var(--bor);
+        border-right: var(--bor);
     }
 
     .postContent {
+        margin-bottom: var(--padding);
         flex: 1;
 
         * {
