--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,9 @@
 import '../styles/components/fullAreaIframe.scss'
 
 import Layout from '../layouts/Layout.astro'
+
+import Hero from '../components/hero.astro'
 ---
-<Layout title="" classItems="ignorePadding" inlineStyles="display: grid;">
-  <!--<iframe frameborder="0" src="https://blog.adarshrkumar.dev"></iframe>-->
+<Layout title="">
+    <Hero />
 </Layout>
