--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,7 +29,10 @@ else age = currentDate.year - dob.year
 ---
 <Layout title="About">
   <div class="about">
-    <p>Hello, my name is Adarsh Kumar. I'm {age} years old, and a High School Student.</p>
+    <p>Hi, I'm Adarsh Kumar, {age} years old, and a High School Student.</p>
+    <p>I am a web developer, programmer, tech enthusiast, photographer, and history enthusiast.</p>
+    <p>I created this site to share my journey, showcase my projects, and other things alike.</p>
+    <p>Explore my work, learn from my mistakes, and Join me as I explore technology and photography.</p>
     <p>I am good with software, so if you need tech help, let me know! I also enjoy history and geography.</p>
   </div>
 </Layout>
