--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,4 +7,9 @@ import Hero from '../components/hero.astro'
 ---
 <Layout title="">
     <Hero />
+    <!-- Featured Articles -->
+    <!-- Portfolio main sublinks here [WebDEV, Coding, Photography] -->
+    <!-- Latest Blog Posts -->
+    <!-- Tutorials and Resources (If Any) -->
+    <!-- Join the "Community"? -->
 </Layout>
