--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,5 +2,7 @@
 import '../styles/components/hero.scss'
 ---
 <section class="hero">
-    <p>Welcome to my personal website! Here, I explore and share my passion for web development, programming, technology, and photography. Whether you're a seasoned professional, an enthusiastic hobbyist, or just curious, there's something here for you. Dive in and let's explore these exciting fields together.</p>
+    <h1>Adarsh Kumar</h1>
+    <h2>Web Developer, Coder, Photopgapher, Musician</h2>
+    <h3>Many Other Things!</h3>
 </section>
