--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 import Hero from '../components/hero.astro'
 ---
-<Layout title="">
+<Layout title="" pageType="home">
     <Hero />
     <!-- Featured Articles -->
     <!-- Portfolio main sublinks here [WebDEV, Coding, Photography] -->
