--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -6,7 +6,7 @@
     width: clamp(500px, 100%, 800px);
 }
 
-.page-title:has(+ .post), .post :is(.info, .content) {
+.page-title:has(+ .post), .post :is(.info, .postContent) {
     border-left: var(--bor);
     border-right: var(--bor);
 }
@@ -20,10 +20,10 @@
     display: flex;
     flex-direction: column;
 
-    .info, .content {
+    .info, .postContent {
         padding: var(--pad);
     }
-    .content {
+    .postContent {
         flex: 1;
 
         & :first-child {
