--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -68,5 +68,6 @@ channels.forEach(function(c, i) {
     </section>
     <div class="divider h no-margin"></div>
     <Nav items={navItems} direction="column" varient="sidebar" />
+    <div class="divider h no-margin"></div>
 </aside>
 <script src="https://apis.google.com/js/platform.js"></script>
