--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -32,8 +32,11 @@
             text-wrap: wrap;
         }
 
-        & :first-child {
+        :first-child {
             margin-top: 0;
+        }
+        :last-child {
+            margin-bottom: 0;
         }
     }
 }
