--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -32,11 +32,15 @@
             text-wrap: wrap;
         }
 
-        :first-child {
-            margin-top: 0;
+        > :first-child {
+            &, > :first-child {
+                margin-top: 0;
+            }
         }
-        :last-child {
-            margin-bottom: 0;
+        > :last-child {
+            &, > :last-child {
+                margin-bottom: 0;
+            }
         }
     }
 }
