--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -15,6 +15,15 @@ var items = [
     description: 'I helped develop and am the Lead Website Designer and Manager for the Graphics for Good Club at my school.', 
     // class: 'featured', 
   }, 
+  {
+    name: 'San Mateo County Astronomical Society', 
+    link: {
+      url: 'https://smcas.net', 
+      target: '_blank', 
+    }, 
+    description: 'My dad is on the SMCAS board, and they had been talking about creating a new accessible website for a while, so he asked me if I would be willing to help. I said that I wouls and spent my winder blrak working on copying content to a WordPress site.', 
+    class: 'featured', 
+  }, 
   // {
   //   name: 'Megan Gillespie', 
   //   link: {
@@ -24,7 +33,7 @@ var items = [
   //   description: 'I did a two week internship through my school with the best ever Megan Gillespie, which consisted of fixing up, editing, and streamining her website.', 
   //   class: 'featured', 
   // }, 
-]
+  ]
 
 var itemsHTML = ''
 
