--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -31,9 +31,9 @@ var items = [
   //     target: '_blank', 
   //   }, 
   //   description: 'I did a two week internship through my school with the best ever Megan Gillespie, which consisted of fixing up, editing, and streamining her website.', 
-  //   class: 'featured', 
+  //   // class: 'featured', 
   // }, 
-  ]
+]
 
 var itemsHTML = ''
 
