--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -54,7 +54,7 @@ items.forEach(function(item, i) {
 })
 
 ---
-<Layout title="Portfolio">
+<!-- <Layout title="Portfolio">
   <SiteGridContent classItems="portfolio">
       {
         items.map(item, i) {
@@ -71,4 +71,4 @@ items.forEach(function(item, i) {
         }
       }
   </SiteGridContent>
-</Layout>
+</Layout> -->
