--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
 
 var projects = [
   {
-    name: 'Misc Projects'
+    name: 'Misc Projects', 
     items: [
       {
         name: 'Timer Application', 
@@ -110,7 +110,7 @@ portfolio.forEach(category, i) {
 }
 
 ---
-<!-- <Layout title="Projects">
+<Layout title="Projects">
   {
     projects.map(category, i) {
       <SiteGridContent>
@@ -131,4 +131,4 @@ portfolio.forEach(category, i) {
       <div class="divider h" style="--s: 1000px;"></div>
     }
   }
-</Layout> -->
+</Layout>
