--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -43,7 +43,7 @@ var buttonsStr = ''
 <nav class="nav" data-direction={direction} data-varient={varient}>
     {
         items.map((item, i) => {
-            <button url={item.url} class="nav-btn" onclick="goToUrl(this)">{item.name}</button>
+            <button url={item.url} class="nav-btn">{item.name}</button>
         })
     }
 </nav>
