--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -55,7 +55,7 @@ items.forEach(function(item, i) {
 
 ---
 <Layout title="Portfolio">
-  <SiteGridContent classItems="portfolio">
+  <SiteGridContent classItems="portfolio wrap">
       {
         items.map((item, i) => {
           var src = `https://image.thum.io/get/maxAge/12/width/${512}/${item.link.url}`
