--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -120,7 +120,7 @@ projects.forEach(function(category, i) {
             var src = `https://image.thum.io/get/maxAge/12/width/${512}/${item.link.url}`
             return (<a href={item.link.url} target={item.link.target} class={`item ${item.class}`}>
               <img src={src} alt class="item__img" />
-              <div>
+              <div class="item__info">
                 <h3 class="item__title">{item.name}</h3>
                 <p class="item__content">{item.description}</p>
               </div>
