--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -41,7 +41,7 @@ $padding: 1rem;
     }
 
     &__info {
-        overflow-x: hidden;
+        // overflow-x: hidden;
     }
 
     &__title, &__content {
