--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -13,6 +13,7 @@ $padding: 1rem;
     }
     &[wrap] .item .item__info .item__content {
         text-wrap: wrap;
+        background-color: white;
     }
 
 }
