--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -34,15 +34,21 @@ $padding: 1rem;
 
     &__info {
         overflow-x: hidden;
+        display: grid;
     }
 
     &__title, &__content {
         margin-block: 0;
         text-align: center;
+        height: fit-content;
     }
 
     &__info, &__content {
         max-width: 100%;
+    }
+
+    &__content {
+        flex: 1;
     }
 
     &:is(:hover, :focus-visible) &__content {
